# vk_c

./: CMakeLists.txt  Makefile  README.md  calculating.c  calculating.h  it.c  structures.c  structures.h  thread.c  timeThreads.c  timeThreads.h
.github/workflows/: ci.yml
home1/: CMakeLists.txt  func.c  func.h
linters/: run.sh
logic_lib/: CMakeLists.txt  calculating.c  calculating.h  structures.c  structures.h  timeThreads.c  timeThreads.h
report/: index-sort-f.html  index-sort-l.html  index.html
report/logic_lib/: calculating.c.func-sort-c.html  calculating.c.func.html  calculating.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  structures.c.func-sort-c.html  structures.c.func.html  structures.c.gcov.html
report/report/: index-sort-f.html  index-sort-l.html  index.html
report/report/logic_lib/: calculating.c.func-sort-c.html  calculating.c.func.html  calculating.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  structures.c.func-sort-c.html  structures.c.func.html  structures.c.gcov.html
report/report/user_lib/: groupByCode.c.func-sort-c.html  groupByCode.c.func.html  groupByCode.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
report/user_lib/: groupByCode.c.func-sort-c.html  groupByCode.c.func.html  groupByCode.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
tests/: CMakeLists.txt  test_cosin_dist.cpp  test_func.cpp  test_user.cpp
tests/data/: a.out  test.c  test_data.txt  test_print.c  vectors.txt
user_lib/: CMakeLists.txt  groupByCode.c  groupByCode.h  user.c  user.h
